--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "vue": "^2.5.17",
+    "vue-prop-data-fallback": "^0.0.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
