--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
+    "table-dragger": "^1.0.2",
     "vue": "^2.5.17",
     "vue-prop-data-fallback": "^0.0.1",
     "vue-router": "^3.0.1",
@@ -25,6 +28,8 @@
     "babel-jest": "^23.0.1",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "node-sass": "^4.9.0",
+    "patch-package": "^5.1.1",
+    "postinstall-postinstall": "^2.0.0",
     "sass-loader": "^7.0.1",
     "vue-template-compiler": "^2.5.17"
   }
