--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit",
-    "postinstall": "patch-package"
+    "build:storybook": "vue-cli-service build:storybook -c config/storybook",
+    "postinstall": "patch-package",
+    "serve:storybook": "vue-cli-service serve:storybook -p 6006 -c config/storybook",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
@@ -18,6 +20,8 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "4.0.0-alpha.20",
+    "@storybook/addon-links": "4.0.0-alpha.20",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-plugin-unit-jest": "^3.0.5",
@@ -31,6 +35,7 @@
     "patch-package": "^5.1.1",
     "postinstall-postinstall": "^2.0.0",
     "sass-loader": "^7.0.1",
+    "vue-cli-plugin-storybook": "^0.4.8",
     "vue-template-compiler": "^2.5.17"
   }
 }
