--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "build:storybook": "vue-cli-service build:storybook -c config/storybook",
     "postinstall": "patch-package",
-    "serve:storybook": "vue-cli-service serve:storybook -p 6006 -c config/storybook",
+    "test": "yarn lint && yarn test:unit",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -20,10 +19,6 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "4.0.0-alpha.20",
-    "@storybook/addon-links": "4.0.0-alpha.20",
-    "@storybook/addon-storysource": "^3.4.11",
-    "@storybook/addon-viewport": "^3.4.11",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-plugin-unit-jest": "^3.0.5",
@@ -33,11 +28,11 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
     "eslint-plugin-vue": "^5.0.0-beta.3",
+    "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "patch-package": "^5.1.1",
     "postinstall-postinstall": "^2.0.0",
     "sass-loader": "^7.0.1",
-    "vue-cli-plugin-storybook": "^0.4.8",
     "vue-template-compiler": "^2.5.17"
   }
 }
