--- a/package.json
+++ b/package.json
@@ -3,16 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
     "test": "yarn lint && yarn test:unit",
+    "lint": "vue-cli-service lint",
+    "serve": "vue-cli-service apollo:watch --run \"vue-cli-service serve\"",
+    "apollo:run": "vue-cli-service apollo:run",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "@babel/runtime": "7.0.0-beta.55",
     "bootstrap": "^4.1.3",
+    "graphql-type-json": "^0.2.1",
+    "lowdb": "^1.0.0",
+    "mkdirp": "^0.5.1",
+    "shortid": "^2.2.8",
     "vue": "^2.5.17",
+    "vue-apollo": "^3.0.0-beta.11",
     "vue-prop-data-fallback": "^1.0.1",
     "vue-router": "^3.0.1",
     "vuedraggable": "^2.16.0",
@@ -27,11 +33,14 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
+    "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-vue": "^5.0.0-beta.3",
+    "graphql-tag": "^2.9.0",
     "moment": "^2.22.2",
     "node-sass": "^4.9.0",
     "postinstall-postinstall": "^2.0.0",
     "sass-loader": "^7.0.1",
+    "vue-cli-plugin-apollo": "^0.18.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
