--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
     "eslint-plugin-graphql": "^2.1.1",
+    "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "graphql-tag": "^2.9.0",
     "lowdb": "^1.0.0",
