--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "graphql-type-json": "^0.2.1",
+    "jquery": "^3.3.1",
     "vue": "^2.5.17",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-prop-data-fallback": "^1.0.1",
     "vue-router": "^3.0.1",
+    "vue-slick": "^1.1.15",
     "vuedraggable": "^2.16.0",
     "vuex": "^3.0.1"
   },
