--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "eslint-plugin-import": "^2.14.0",
     "graphql-type-json": "^0.2.1",
+    "lodash.clonedeep": "^4.5.0",
     "jquery": "^3.3.1",
     "vue": "^2.5.17",
     "vue-apollo": "^3.0.0-beta.11",
