--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "scripts": {
     "build": "vue-cli-service build",
-    "test": "yarn lint && yarn test:unit",
+    "test": "yarn lint && yarn test:unit --coverage",
+    "test:dev": "yarn test:unit --watchAll",
     "lint": "vue-cli-service lint",
     "serve": "vue-cli-service apollo:watch --run \"vue-cli-service serve\"",
     "apollo:run": "vue-cli-service apollo:run",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit --coverage"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "eslint-plugin-import": "^2.14.0",
     "graphql-type-json": "^0.2.1",
     "lodash.clonedeep": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
     "jquery": "^3.3.1",
     "vue": "^2.5.17",
     "vue-apollo": "^3.0.0-beta.11",
+    "vue-promised": "^1.0.0",
     "vue-prop-data-fallback": "^1.0.1",
     "vue-router": "^3.0.1",
     "vue-slick": "^1.1.15",
@@ -37,6 +41,7 @@
     "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-jest": "^22.0.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
+    "faked-promise": "^2.0.0",
     "graphql-tag": "^2.9.0",
     "lowdb": "^1.0.0",
     "mkdirp": "^0.5.1",
