--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "test": "yarn lint && yarn test:unit --coverage",
     "test:dev": "yarn test:unit --watchAll",
     "lint": "vue-cli-service lint",
-    "serve": "vue-cli-service apollo:watch --run \"vue-cli-service serve\"",
-    "apollo:run": "vue-cli-service apollo:run",
-    "test:unit": "vue-cli-service test:unit --coverage"
+    "serve": "yarn run server:mock | vue-cli-service serve",
+    "test:unit": "vue-cli-service test:unit --coverage",
+    "server:mock": "node ./server-mock/index.js"
   },
   "dependencies": {
+    "apollo-server": "^2.2.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "eslint-plugin-import": "^2.14.0",
-    "graphql-type-json": "^0.2.1",
+    "graphql": "^14.0.2",
     "jquery": "^3.3.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "vue": "^2.5.17",
-    "vue-apollo": "^3.0.0-beta.11",
     "vue-promised": "^1.0.0",
     "vue-prop-data-fallback": "^1.0.1",
     "vue-router": "^3.0.2",
@@ -38,18 +38,15 @@
     "@vue/test-utils": "^1.0.0-beta.26",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
-    "eslint-plugin-graphql": "^3.0.1",
     "eslint-plugin-jest": "^22.1.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "faked-promise": "^2.0.0",
-    "graphql-tag": "^2.9.0",
     "lowdb": "^1.0.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.10.0",
     "postinstall-postinstall": "^2.0.0",
     "sass-loader": "^7.0.1",
     "shortid": "^2.2.8",
-    "vue-cli-plugin-apollo": "^0.18.1",
     "vue-template-compiler": "^2.5.17"
   }
 }
