--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
-VUE_APP_AUTH_SERVER_URL="http://localhost:4000"
-VUE_APP_URL="http://localhost:8080"
+VUE_APP_AUTH_SERVER_URL="http://localhost:4000/oauth"
+VUE_APP_GQL_SERVER_URL="http://localhost:4000/graphql"
+VUE_FRONT_URL="http://localhost:8080"
 VUE_APP_CLIENT_ID=nextgenui-implicit
