--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 VUE_APP_AUTH_SERVER_URL="/oauth"
-VUE_APP_GQL_SERVER_URL="/graphql"
+VUE_APP_GQL_SERVER_URL="/api/graphql"
 VUE_FRONT_URL="/"
 VUE_APP_CLIENT_ID=nextgenui-implicit
