Change external urls for non dev env

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VUE_APP_AUTH_SERVER_URL="/"
-VUE_APP_GQL_SERVER_URL="/api/graphql"
-VUE_APP_FRONT_URL="/"
+VUE_APP_AUTH_SERVER_URL=http://localhost:8084
+VUE_APP_GQL_SERVER_URL=/api/graphql
+VUE_APP_FRONT_URL=http://localhost:8080
 VUE_APP_CLIENT_ID=powwowui-implicit
