--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server": "^2.2.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "date-fns": "^2.0.0-alpha.25",
     "eslint-plugin-import": "^2.14.0",
     "graphql": "^14.0.2",
     "jquery": "^3.3.1",
@@ -23,6 +24,7 @@
     "lodash.debounce": "^4.0.8",
     "vue": "^2.5.17",
     "vue-promised": "^1.0.0",
+    "vue-flatpickr-component": "^8.0.0",
     "vue-prop-data-fallback": "^1.0.1",
     "vue-router": "^3.0.2",
     "vue-slick": "^1.1.15",
