--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.differenceby": "^4.8.0",
+    "lodash.isequal": "^4.5.0",
     "lodash.sortby": "^4.7.0",
     "lodash.union": "^4.6.0",
     "lodash.unionby": "^4.8.0",
