--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-import": "^2.14.0",
     "fuzzysort": "^1.1.4",
     "graphql": "^14.0.2",
+    "jest-transform-stub": "^1.0.0",
     "jquery": "^3.3.1",
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
