--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "vue-cli-service lint",
     "build:full-local": "vue-cli-service build --mode full-local",
     "build:integration": "vue-cli-service build --mode integration",
-    "serve:fullstack": "yarn run server:mock | vue-cli-service serve --mode fullstack",
+    "serve:local-integration": "vue-cli-service serve --mode local-integration",
+    "serve:fullstack": "vue-cli-service serve --mode fullstack",
     "server:mock": "node ./server-mock/index.js",
     "test:dev": "yarn test:unit --watchAll",
     "test:unit": "vue-cli-service test:unit"
