--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "date-fns": "^2.0.0-alpha.25",
+    "daterangepicker": "^3.0.3",
     "eslint-plugin-import": "^2.14.0",
     "fuzzysort": "^1.1.4",
     "graphql": "^14.0.2",
@@ -34,6 +35,7 @@
     "lodash.sortby": "^4.7.0",
     "lodash.union": "^4.6.0",
     "lodash.unionby": "^4.8.0",
+    "moment": "^2.24.0",
     "vue": "^2.5.17",
     "vue-flatpickr-component": "^8.0.0",
     "vue-i18n": "^8.0.0",
