--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "sass-loader": "^7.0.1",
     "shortid": "^2.2.8",
     "vue-cli-plugin-i18n": "^0.5.1",
+    "vue-cli-plugin-webpack-bundle-analyzer": "^1.2.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
