--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@babel/runtime": "7.0.0-beta.55",
     "apollo-server": "^2.2.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "date-fns": "^2.0.0-alpha.25",
     "daterangepicker": "^3.0.3",
-    "eslint-plugin-import": "^2.14.0",
     "fuzzysort": "^1.1.4",
     "graphql": "^14.0.2",
     "jest-transform-stub": "^1.0.0",
@@ -45,6 +43,7 @@
     "vue-router": "^3.0.2",
     "vue-select": "^2.5.1",
     "vue-slick": "^1.1.15",
+    "vue-template-compiler": "^2.5.17",
     "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1",
     "vuex-mock-store": "^0.0.5"
@@ -60,6 +59,7 @@
     "apollo-server-express": "^2.2.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "express": "^4.16.4",
@@ -71,7 +71,6 @@
     "sass-loader": "^7.0.1",
     "shortid": "^2.2.8",
     "vue-cli-plugin-i18n": "^0.5.1",
-    "vue-cli-plugin-webpack-bundle-analyzer": "^1.2.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-cli-plugin-webpack-bundle-analyzer": "^1.2.0"
   }
 }
