--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lodash.union": "^4.6.0",
     "lodash.unionby": "^4.8.0",
     "moment": "^2.24.0",
-    "vue": "^2.5.17",
+    "vue": "2.5.22",
     "vue-flatpickr-component": "^8.0.0",
     "vue-i18n": "^8.0.0",
     "vue-promised": "^1.0.0",
@@ -42,7 +42,7 @@
     "vue-router": "^3.0.2",
     "vue-select": "^2.5.1",
     "vue-slick": "^1.1.15",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "2.5.22",
     "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1",
     "vuex-mock-store": "^0.0.7"
