--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "daterangepicker": "^3.0.3",
+    "flatpickr": "^4.5.7",
     "fuzzysort": "^1.1.4",
     "graphql": "^14.0.2",
     "jest-transform-stub": "^2.0.0",
@@ -35,12 +36,10 @@
     "lodash.unionby": "^4.8.0",
     "moment": "^2.24.0",
     "vue": "2.5.22",
-    "vue-flatpickr-component": "^8.0.0",
     "vue-i18n": "^8.0.0",
     "vue-promised": "^1.0.0",
     "vue-prop-data-fallback": "^1.0.1",
     "vue-router": "^3.0.2",
-    "vue-select": "^2.5.1",
     "vue-slick": "^1.1.15",
     "vue-template-compiler": "2.5.22",
     "vuedraggable": "^2.17.0",
