--- a/package.json
+++ b/package.json
@@ -25,7 +25,15 @@
     "graphql": "^14.0.2",
     "jest-transform-stub": "^2.0.0",
     "jquery": "^3.3.1",
-    "lodash-es": "^4.17.11",
+    "lodash": "^4.17.11",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.debounce": "^4.0.8",
+    "lodash.differenceby": "^4.8.0",
+    "lodash.get": "^4.4.2",
+    "lodash.isequal": "^4.5.0",
+    "lodash.sortby": "^4.7.0",
+    "lodash.union": "^4.6.0",
+    "lodash.unionby": "^4.8.0",
     "moment": "^2.24.0",
     "vue": "2.5.22",
     "vue-i18n": "^8.0.0",
@@ -47,13 +55,11 @@
     "@vue/test-utils": "^1.0.0-beta.26",
     "apollo-server-express": "^2.2.5",
     "babel-core": "7.0.0-bridge.0",
-    "babel-plugin-lodash": "^3.3.4",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "express": "^4.16.4",
     "faked-promise": "^2.0.0",
-    "lodash-webpack-plugin": "^0.11.5",
     "lowdb": "^1.0.0",
     "mkdirp": "^0.5.1",
     "node-sass": "^4.10.0",
