--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@vue/test-utils": "^1.0.0-beta.26",
     "apollo-server-express": "^2.2.5",
     "babel-core": "7.0.0-bridge.0",
+    "compression-webpack-plugin": "^2.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.1.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
