--- a/ui/.env.development
+++ b/ui/.env.development
@@ -1,3 +1,4 @@
 VUE_APP_AUTH_SERVER_URL="http://localhost:4000"
 VUE_APP_GQL_SERVER_URL="http://localhost:4000/graphql"
 VUE_APP_CLIENT_ID=nextgenui-implicit
+VUE_APP_BASE_URL="/p"
