--- a/ui/.env.integration
+++ b/ui/.env.integration
@@ -2,3 +2,4 @@ NODE_ENV=production
 VUE_APP_AUTH_SERVER_URL=""
 VUE_APP_GQL_SERVER_URL=/api/graphql
 VUE_APP_CLIENT_ID=powwowui-implicit
+VUE_APP_BASE_URL="/p"
