--- a/ui/.env.production
+++ b/ui/.env.production
@@ -1,3 +1,4 @@
 VUE_APP_AUTH_SERVER_URL=http://POWWOWNG1.zone.local:8084
 VUE_APP_GQL_SERVER_URL=/api/graphql
 VUE_APP_CLIENT_ID=powwowui-implicit
+VUE_APP_BASE_URL="/p"
