--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.differenceby": "^4.8.0",
+    "lodash.differencewith": "^4.5.0",
     "lodash.flatten": "^4.4.0",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
