--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "lodash.clonedeep": "^4.5.0",
     "lodash.debounce": "^4.0.8",
     "lodash.differenceby": "^4.8.0",
+    "lodash.differencewith": "^4.5.0",
     "lodash.flatten": "^4.4.0",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
@@ -36,6 +37,7 @@
     "lodash.startswith": "^4.2.1",
     "lodash.union": "^4.6.0",
     "lodash.unionby": "^4.8.0",
+    "lodash.xorwith": "^4.5.0",
     "moment": "^2.24.0",
     "vue": "2.5.22",
     "vue-i18n": "^8.0.0",
