--- a/ui-server/build.gradle
+++ b/ui-server/build.gradle
@@ -15,7 +15,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
-    springCloudVersion = 'Finchley.SR2'
+    springCloudVersion = 'Greenwich.SR2'
 }
 
 repositories {
