Revert "refacto: upgrade to spring cloud Greenwich SR2"
This reverts commit 8957024849337dc0298fc6d023e430e46fca6499

--- a/ui-server/build.gradle
+++ b/ui-server/build.gradle
@@ -15,7 +15,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
-    springCloudVersion = 'Greenwich.SR2'
+    springCloudVersion = 'Finchley.SR2'
 }
 
 repositories {
