--- a/ui-server/build.gradle
+++ b/ui-server/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id "java"
-    id "org.springframework.boot" version "2.0.7.RELEASE"
-    id "io.spring.dependency-management" version "1.0.6.RELEASE"
-    id "com.google.cloud.tools.jib" version "1.0.2"
+    id "org.springframework.boot" version "2.1.6.RELEASE"
+    id "io.spring.dependency-management" version "1.0.7.RELEASE"
+    id "com.google.cloud.tools.jib" version "1.3.0"
     id "idea"
 }
 
@@ -15,7 +15,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
-    springCloudVersion = 'Finchley.SR2'
+    springCloudVersion = 'Greenwich.SR2'
 }
 
 repositories {
