tentative de corriger le déploiement UAT

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -158,7 +158,7 @@ deploy_uat:
     - kubectl config use-context m2m-node-uat
   script:
     - kubectl get po
-    - . ui-server/build_info
+    - . ui-server/release_info
     - kubectl set image deployments/ui ui=$CI_REGISTRY_IMAGE:$RELEASE_VERSION --record=true
   when: manual
   environment:
