--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,8 @@
     "flatpickr": "^4.5.7",
     "fuzzysort": "^1.1.4",
     "graphql": "^14.0.2",
+    "highcharts": "^7.1.3",
+    "highcharts-vue": "^1.3.5",
     "jest-transform-stub": "^2.0.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.11",
