--- a/ui/package.json
+++ b/ui/package.json
@@ -50,6 +50,7 @@
     "vue-router": "^3.0.2",
     "vue-slick": "^1.1.15",
     "vue-template-compiler": "2.5.22",
+    "vue2-google-maps": "^0.10.7",
     "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1",
     "vuex-mock-store": "^0.0.7"
