--- a/ui-server/src/main/resources/application.yml
+++ b/ui-server/src/main/resources/application.yml
@@ -1,2 +1,7 @@
 server:
   port: ${UI_SERVICE_PORT:8086}
+  
+logging:
+  file: ui-application.log   # obligatoire dans ce fichier pour que /actuator/logfile soit accessible
+
+
