Fix: Corriger l'accès à l'application depuis IE

--- a/ui/.env.development
+++ b/ui/.env.development
@@ -2,3 +2,5 @@ VUE_APP_AUTH_SERVER_URL="http://localhost:4000"
 VUE_APP_GQL_SERVER_URL="http://localhost:4000/graphql"
 VUE_APP_CLIENT_ID=nextgenui-implicit
 VUE_APP_BASE_URL="/p"
+VUE_APP_GMAP_CLIENT="gme-docapostbposas"
+VUE_APP_GMAP_CHANNEL="uat"
