--- a/ui/.env.full-local
+++ b/ui/.env.full-local
@@ -2,3 +2,5 @@ VUE_APP_AUTH_SERVER_URL=""
 VUE_APP_GQL_SERVER_URL="/api/graphql"
 VUE_APP_CLIENT_ID=powwowui-implicit
 VUE_APP_BASE_URL="/p"
+VUE_APP_GMAP_CLIENT="gme-docapostbposas"
+VUE_APP_GMAP_CHANNEL="uat"
