--- a/ui/.env.local-integration
+++ b/ui/.env.local-integration
@@ -3,3 +3,5 @@ VUE_APP_GQL_SERVER_URL="http://powwowng1.zone.local:8080/api/graphql"
 VUE_APP_API_BASE_URL="http://powwowng1.zone.local:8080"
 VUE_APP_CLIENT_ID=powwowui-implicit
 VUE_APP_BASE_URL="/p"
+VUE_APP_GMAP_CLIENT="gme-docapostbposas"
+VUE_APP_GMAP_CHANNEL="uat"
