--- a/ui/package.json
+++ b/ui/package.json
@@ -12,13 +12,17 @@
     "serve:local-integration": "vue-cli-service serve --mode local-integration",
     "serve:fullstack": "vue-cli-service serve --mode fullstack",
     "server:mock": "node ./server-mock/index.js",
+    "serve:prod": "yarn build --mode fullstack && serve -s dist -l 8081",
     "test:dev": "yarn test:unit --watchAll",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "e2e:open": "cypress open",
+    "e2e": "cypress run"
   },
   "dependencies": {
     "apollo-server": "^2.2.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "cypress": "^3.6.1",
     "daterangepicker": "^3.0.3",
     "flatpickr": "^4.5.7",
     "fuzzysort": "^1.1.4",
@@ -41,6 +45,7 @@
     "lodash.unionby": "^4.8.0",
     "lodash.xorwith": "^4.5.0",
     "moment": "^2.24.0",
+    "serve": "^11.2.0",
     "snapsvg-cjs": "^0.0.6",
     "v-tooltip": "^2.0.2",
     "vue": "2.5.22",
