--- a/ui/package.json
+++ b/ui/package.json
@@ -48,13 +48,13 @@
     "serve": "^11.2.0",
     "snapsvg-cjs": "^0.0.6",
     "v-tooltip": "^2.0.2",
-    "vue": "2.5.22",
+    "vue": "^2.6.10",
     "vue-i18n": "^8.0.0",
     "vue-promised": "^1.0.0",
     "vue-prop-data-fallback": "^1.0.1",
     "vue-router": "^3.0.2",
     "vue-slick": "^1.1.15",
-    "vue-template-compiler": "2.5.22",
+    "vue-template-compiler": "^2.6.10",
     "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1",
     "vuex-mock-store": "^0.0.7"
