feat: Enregisrer la disposition des widgets en local storage

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,5 +83,8 @@
   "[markdown]": {
     "editor.wordWrap": "wordWrapColumn",
     "editor.wordWrapColumn": 80
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
   }
 }
