feat: Spring Cloud Kubernetes Discovery Support

--- a/ui-server/src/main/resources/bootstrap.yml
+++ b/ui-server/src/main/resources/bootstrap.yml
@@ -8,7 +8,10 @@ spring:
       label: 'master'
       discovery:
         enabled: true
-        serviceId: configserver
+        serviceId: config
+    kubernetes:
+      enabled: false
+
 eureka:
   instance:
     preferIpAddress: true  # Best with true in a docker env
