--- a/ui-server/build.gradle
+++ b/ui-server/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
     implementation('org.springframework.cloud:spring-cloud-starter-config')
 	implementation('org.springframework.boot:spring-boot-starter-actuator')
+    implementation('org.springframework.cloud:spring-cloud-starter-kubernetes')
+    implementation('org.springframework.cloud:spring-cloud-starter-kubernetes-ribbon')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
