--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "cypress": "^3.6.1",
+    "cypress-cucumber-preprocessor": "^2.0.1",
     "daterangepicker": "^3.0.3",
     "flatpickr": "^4.5.7",
     "fuzzysort": "^1.1.4",
@@ -84,5 +85,8 @@
     "shortid": "^2.2.8",
     "vue-cli-plugin-i18n": "^0.5.1",
     "vue-cli-plugin-webpack-bundle-analyzer": "^1.2.0"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   }
 }
