Fix: Correction des tests cypress

--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,5 @@ ui-server/nbdist/
 ui-server/.nb-gradle/
 ui-server/src/main/resources/public
 
-ui/cypress/video
+ui/cypress/videos/
+ui/cypress/screenshots
