--- a/ui-server/build.gradle
+++ b/ui-server/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id "java"
-    id "org.springframework.boot" version "2.1.9.RELEASE"
-    id "io.spring.dependency-management" version "1.0.7.RELEASE"
-    id "com.google.cloud.tools.jib" version "1.6.1"
+    id "org.springframework.boot" version "2.1.12.RELEASE"
+    id "io.spring.dependency-management" version "1.0.9.RELEASE"
+    id "com.google.cloud.tools.jib" version "2.2.0"
     id "idea"
 }
 
@@ -15,7 +15,7 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 ext {
-    springCloudVersion = 'Greenwich.SR3'
+    springCloudVersion = 'Greenwich.SR5'
 }
 
 repositories {
@@ -75,10 +75,9 @@ jib {
     def registryUsername = project.hasProperty('registryUsername') ? registryUsername : null
     def registryPassword = project.hasProperty('registryPassword') ? registryPassword : null
 
-	container {
-		useCurrentTimestamp = true
-        jvmFlags = ['-Xms512m','-Xmx512m']
-	}
+    container {
+        creationTime = 'USE_CURRENT_TIMESTAMP'
+    }
 
     from {
         image = 'gcr.io/distroless/java:debug'
