--- a/ui/package.json
+++ b/ui/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "yarn run server:mock | vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode fullstack",
+    "serve:mock": "yarn run server:mock | vue-cli-service serve",
     "build": "vue-cli-service build",
     "test": "yarn lint && yarn test:unit --coverage",
     "lint": "vue-cli-service lint",
