--- a/ui-server/src/main/resources/application.yml
+++ b/ui-server/src/main/resources/application.yml
@@ -2,6 +2,6 @@ server:
   port: ${UI_SERVICE_PORT:8086}
   
 logging:
-  file: ui-application.log   # obligatoire dans ce fichier pour que /actuator/logfile soit accessible
+  file: logs/ui.log   # obligatoire dans ce fichier pour que /actuator/logfile soit accessible
 
 
