--- a/ui/package.json
+++ b/ui/package.json
@@ -41,6 +41,7 @@
     "lodash.flatten": "^4.4.0",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
+    "lodash.maxby": "^4.6.0",
     "lodash.sortby": "^4.7.0",
     "lodash.startswith": "^4.2.1",
     "lodash.union": "^4.6.0",
