Add Matomo Tag Manager support

--- a/ui/.env.integration
+++ b/ui/.env.integration
@@ -1,6 +1,7 @@
 NODE_ENV=production
 VUE_APP_AUTH_SERVER_URL=""
 VUE_APP_GQL_SERVER_URL=/api/graphql
+VUE_APP_API_BASE_URL="/"
 VUE_APP_CLIENT_ID=powwowui-implicit
 VUE_APP_BASE_URL="/p"
 VUE_APP_GMAP_CLIENT="gme-docapostbposas"
