--- a/ui/.env.full-local
+++ b/ui/.env.full-local
@@ -1,4 +1,4 @@
-VUE_APP_AUTH_SERVER_URL=""
+VUE_APP_GATEWAY_URL=""
 VUE_APP_GQL_SERVER_URL="/api/graphql"
 VUE_APP_CLIENT_ID=powwowui-implicit
 VUE_APP_BASE_URL="/p"
