--- a/ui/.env.integration
+++ b/ui/.env.integration
@@ -1,5 +1,5 @@
 NODE_ENV=production
-VUE_APP_AUTH_SERVER_URL=""
+VUE_APP_GATEWAY_URL=""
 VUE_APP_GQL_SERVER_URL=/api/graphql
 VUE_APP_API_BASE_URL="/"
 VUE_APP_CLIENT_ID=powwowui-implicit
