--- a/ui/.env.local-integration
+++ b/ui/.env.local-integration
@@ -1,4 +1,4 @@
-VUE_APP_AUTH_SERVER_URL="http://powwowng1.zone.local:8080"
+VUE_APP_GATEWAY_URL="http://powwowng1.zone.local:8080"
 VUE_APP_GQL_SERVER_URL="http://powwowng1.zone.local:8080/api/graphql"
 VUE_APP_API_BASE_URL="http://powwowng1.zone.local:8080"
 VUE_APP_CLIENT_ID=powwowui-implicit
